@@ -79,7 +79,10 @@ public class SolrConfig extends Config {
 
   /**
    * Singleton keeping track of configuration errors
+   *
+   * @deprecated All exceptions encountered during config parsing are now thrown by the respective constructors, preventing initialization.
    */
+  @Deprecated
   public static final Collection<Throwable> severeErrors = new HashSet<Throwable>();
 
   /** Creates a default instance from the solrconfig.xml. */
