@@ -1,0 +1,43 @@
+<?xml version="1.0" ?>
+<!--
+ Licensed to the Apache Software Foundation (ASF) under one or more
+ contributor license agreements.  See the NOTICE file distributed with
+ this work for additional information regarding copyright ownership.
+ The ASF licenses this file to You under the Apache License, Version 2.0
+ (the "License"); you may not use this file except in compliance with
+ the License.  You may obtain a copy of the License at
+
+     http://www.apache.org/licenses/LICENSE-2.0
+
+ Unless required by applicable law or agreed to in writing, software
+ distributed under the License is distributed on an "AS IS" BASIS,
+ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ See the License for the specific language governing permissions and
+ limitations under the License.
+-->
+
+<schema name="bad-schema-dup-field" version="1.0">
+  <types>
+    <fieldType name="string" class="solr.StrField"/>
+    <fieldtype name="text" class="solr.TextField" />
+ </types>
+
+
+ <fields>
+   <field name="id" type="string" indexed="true" stored="true" multiValued="false" required="false"/>
+   
+   <field name="signatureField" type="string" indexed="true" stored="false"/>
+
+   <!-- BEGIN BAD STUFF -->
+   <field name="fAgain" type="text" indexed="true" stored="true"/>
+   <field name="fAgain" type="text" indexed="true" stored="true"/>
+   <!-- END BAD STUFF -->
+
+   <dynamicField name="*_sS" type="string"  indexed="false" stored="true"/>
+
+ </fields>
+
+ <defaultSearchField>id</defaultSearchField>
+ <uniqueKey>id</uniqueKey>
+
+</schema>
